[metadata]
name = nipistaa
version = 0.1.0
description = The all in one lib to bootstrap your pincer bot
long_description = file: README.md
long_description_content_type = text/markdown
author = Sigmanificient
author_email = contact@yohannboniface.dev
keywords = pincer, discord, api, asynchronous, websockets, aiohttp
license = MIT
license_file = LICENSE
platform = unix, linux, osx, cygwin, windows

project_urls =
    Github repository=https://github.com/Sigmanificient/nipistaa
    Discord=https://discord.gg/8WkYz3fNFm
    Pincer=https://github.com/pincer-org/pincer

classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
packages =
    nipistaa
    nipistaa.templates
    nipistaa.utils

install_requires =
    pincer >= 0.15.3

[options.extras_require]
testing =
    mypy
    pytest

[options.package_data]
nipistaa = py.typed